--- a/AutomationElementFinder/MainWindow.xaml
+++ b/AutomationElementFinder/MainWindow.xaml
@@ -20,62 +20,67 @@
     OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
     THE SOFTWARE.
 -->
-    
+
 <Window x:Class="AutomationElementFinder.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:AutomationElementFinder="clr-namespace:AutomationElementFinder"
-        Title="AutomationElementFinder"
+        xmlns:AutomationElementFinder="clr-namespace:AutomationElementFinder" Title="AutomationElementFinder"
         Height="500"
         Width="550">
-
+    <Window.Resources>
+        
+    </Window.Resources>
+    
     <DockPanel>
-        <Border Background="YellowGreen" DockPanel.Dock="Bottom">
-            <TextBlock Text="Hold down Ctrl-Shift and mouse over elements to select them" Margin="2" />
-        </Border>
+        <ToolBarTray DockPanel.Dock="Top">
+            <ToolBar>
+                <CheckBox Content="Activate" IsChecked="{Binding IsActivated}" />
+                <Separator />
+                <CheckBox Content="Highlight" IsChecked="{Binding ShowHighlight}" />
+            </ToolBar>
+            <ToolBar>
+                <CheckBox Content="Read Siblings" IsChecked="{Binding ReadFullTree}" />
+            </ToolBar>
+            <ToolBar>
+                <CheckBox Content="Hide Empty" IsChecked="True" x:Name="hideEmpty" />
+            </ToolBar>
+        </ToolBarTray>
+        
+        <StatusBar DockPanel.Dock="Bottom">
+            <StatusBarItem Content="Hold down Ctrl-Shift and mouse over elements to select them" />
+        </StatusBar>
+
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="0.4*" />
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="0.6*" />
             </Grid.ColumnDefinitions>
-
-            <DockPanel>
-                <Button HorizontalAlignment="Left" Content="Toggle Highlight" Click="ToggleHighlight_Click" DockPanel.Dock="Bottom" />
-                <TreeView x:Name="elementTree" ItemsSource="{Binding Elements}">
-                    <TreeView.ItemContainerStyle>
-                        <Style TargetType="{x:Type TreeViewItem}">
-                            <Setter Property="IsExpanded" Value="True" />
-                            <Style.Triggers>
-                                <Trigger Property="IsSelected" Value="True">
-                                    <Setter Property="Padding" Value="2" />
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TreeView.ItemContainerStyle>
-                    <TreeView.ItemTemplate>
-                        <HierarchicalDataTemplate ItemsSource="{Binding Children}">
-                            <TextBlock x:Name="PART_NameDisplay" Text="{Binding }" Foreground="Black" />
-                            <HierarchicalDataTemplate.Triggers>
-                                <DataTrigger Binding="{Binding HasAutomationId}" Value="True">
-                                    <Setter TargetName="PART_NameDisplay" Property="Background" Value="LightGreen" />
-                                </DataTrigger>
-                                <DataTrigger Binding="{Binding HasAutomationId}" Value="False">
-                                    <Setter TargetName="PART_NameDisplay" Property="Foreground" Value="Gray" />
-                                    <Setter TargetName="PART_NameDisplay" Property="FontStyle" Value="Italic" />
-                                </DataTrigger>
-                            </HierarchicalDataTemplate.Triggers>
-                        </HierarchicalDataTemplate>
-                    </TreeView.ItemTemplate>
-                </TreeView>
-            </DockPanel>
+            
+            <AutomationElementFinder:EnhancedTreeView x:Name="elementTree" ItemsSource="{Binding Elements}" >
+                <AutomationElementFinder:EnhancedTreeView.ItemContainerStyle>
+                    <Style TargetType="{x:Type AutomationElementFinder:EnhancedTreeViewItem}">
+                        <Setter Property="IsExpanded" Value="True" />
+                        <Setter Property="ContentStretching" Value="True" />
+                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                        <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
+                        <Setter Property="HasAutomationId" Value="{Binding HasAutomationId}" />
+                    </Style>
+                </AutomationElementFinder:EnhancedTreeView.ItemContainerStyle>
+                <AutomationElementFinder:EnhancedTreeView.ItemTemplate>
+                    <HierarchicalDataTemplate ItemsSource="{Binding Children}">
+                        <TextBlock x:Name="PART_NameDisplay" Text="{Binding }" Foreground="Black" />
+                    </HierarchicalDataTemplate>
+                </AutomationElementFinder:EnhancedTreeView.ItemTemplate>
+            </AutomationElementFinder:EnhancedTreeView>
 
             <GridSplitter Width="4" ResizeBehavior="PreviousAndNext" Grid.Column="1" />
 
             <ScrollViewer Grid.Column="2">
-                <AutomationElementFinder:AutomationElementVisualization Element="{Binding SelectedItem.AutomationElement, ElementName=elementTree}" />
+                <AutomationElementFinder:PropertiesControl Element="{Binding SelectedItem.AutomationElement, ElementName=elementTree}"
+                                                           HideEmptyEntries="{Binding IsChecked, ElementName=hideEmpty}" />
             </ScrollViewer>
-
         </Grid>
     </DockPanel>
+    
 </Window>
