--- a/AutomationElementFinder/MainWindow.xaml
+++ b/AutomationElementFinder/MainWindow.xaml
@@ -1,6 +1,6 @@
 ﻿<!-- License
 
-    Copyright (c) 2012 David Wendland
+    Copyright (c) 2012-2013 David Wendland
 
     Permission is hereby granted, free of charge, to any person obtaining a copy
     of this software and associated documentation files (the "Software"), to deal
