Add element availability checks to be sure it did not crash if the children will be read very often and are very dynamic added and removed. Remove annoying horizontal scroll bar in the tree of the AutomationElementFinder

--- a/AutomationElementFinder/MainWindow.xaml
+++ b/AutomationElementFinder/MainWindow.xaml
@@ -57,7 +57,7 @@
                 <ColumnDefinition Width="0.6*" />
             </Grid.ColumnDefinitions>
             
-            <AutomationElementFinder:EnhancedTreeView x:Name="elementTree" ItemsSource="{Binding Elements}" >
+            <AutomationElementFinder:EnhancedTreeView x:Name="elementTree" ItemsSource="{Binding Elements}" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                 <AutomationElementFinder:EnhancedTreeView.ItemContainerStyle>
                     <Style TargetType="{x:Type AutomationElementFinder:EnhancedTreeViewItem}">
                         <Setter Property="IsExpanded" Value="True" />
